--- a/Menu/app/src/main/res/menu/top_app_bar.xml
+++ b/Menu/app/src/main/res/menu/top_app_bar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Main">
+    tools:context=".TopAppBar">
     <item
         android:id="@+id/favorite"
         android:contentDescription="Favoritos"
