--- a/Bread4All/app/src/main/res/layout/activity_inicio.xml
+++ b/Bread4All/app/src/main/res/layout/activity_inicio.xml
@@ -30,8 +30,9 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="307dp"
-        android:layout_height="259dp"
+        android:id="@+id/rv"
+        android:layout_width="410dp"
+        android:layout_height="673dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
