--- a/Bread4All/app/src/main/res/layout/activity_inicio.xml
+++ b/Bread4All/app/src/main/res/layout/activity_inicio.xml
@@ -31,13 +31,47 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
-        android:layout_width="410dp"
-        android:layout_height="673dp"
+        android:layout_width="411dp"
+        android:layout_height="539dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/textViewCantidad"
+        android:layout_width="61dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/Saldo_base"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textViewMoneda"
+        android:layout_width="88dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toEndOf="@+id/textViewCantidad"
+        app:layout_constraintTop_toBottomOf="@+id/rv" />
+
+    <TextView
+        android:id="@+id/textViewProductoTop"
+        android:layout_width="123dp"
+        android:layout_height="42dp"
+        android:text="@string/ProductoTop"
+        app:layout_constraintStart_toEndOf="@+id/textViewMoneda"
+        app:layout_constraintTop_toBottomOf="@+id/rv" />
+
+    <TextView
+        android:id="@+id/textViewNombre"
+        android:layout_width="100dp"
+        android:layout_height="38dp"
+        app:layout_constraintStart_toEndOf="@+id/textViewProductoTop"
+        app:layout_constraintTop_toTopOf="@+id/textViewProductoTop" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
