--- a/Bread4All/app/src/main/res/menu/navigation_drawer.xml
+++ b/Bread4All/app/src/main/res/menu/navigation_drawer.xml
@@ -24,6 +24,11 @@
         android:title="@string/title_pgweb"
         app:showAsAction="ifRoom"/>
     <item
+        android:id="@+id/SMS"
+        android:title="@string/SMS"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/Preferencias"
         android:title="@string/title_preferencias"
         app:showAsAction="ifRoom"/>
