--- a/Bread4All/app/src/main/res/xml/root_preferences.xml
+++ b/Bread4All/app/src/main/res/xml/root_preferences.xml
@@ -3,7 +3,7 @@
     <PreferenceCategory app:title="@string/Moneda">
 
         <ListPreference
-            app:defaultValue="Euro"
+            app:defaultValue="Euros"
             app:entries="@array/moneda_entrada"
             app:entryValues="@array/moneda_valores"
             app:key="moneda"
