--- a/Bread4All/app/src/main/res/values/arrays.xml
+++ b/Bread4All/app/src/main/res/values/arrays.xml
@@ -1,12 +1,12 @@
 <resources>
     <!-- Reply Preference -->
     <string-array name="moneda_entrada">
-        <item>Euro</item>
-        <item>Dolar</item>
+        <item>Euros</item>
+        <item>Dolares</item>
     </string-array>
 
     <string-array name="moneda_valores">
-        <item>euro</item>
-        <item>dolar</item>
+        <item>euros</item>
+        <item>dolares</item>
     </string-array>
 </resources>
