--- a/Bread4All/app/src/main/res/layout-land/activity_registrarse.xml
+++ b/Bread4All/app/src/main/res/layout-land/activity_registrarse.xml
@@ -9,13 +9,13 @@
         android:id="@+id/textFieldNombre"
         android:layout_width="288dp"
         android:layout_height="58dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:hint="@string/ic_nombre"
         android:textColorHint="#FDFCFC"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewRegistro"
         app:placeholderTextColor="#F8F8F8"
@@ -35,8 +35,8 @@
         android:layout_height="58dp"
         android:layout_marginTop="8dp"
         android:hint="@string/ic_telefono"
-        android:textColorHint="#FAF8F8"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textFieldNombre"
         app:startIconContentDescription="@string/ic_telefono"
@@ -53,10 +53,10 @@
         android:id="@+id/textFecha"
         android:layout_width="288dp"
         android:layout_height="58dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:hint="@string/ic_fecha"
-        android:textColorHint="#EFEFEF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTelefono"
         app:startIconContentDescription="@string/ic_fecha"
@@ -74,14 +74,13 @@
         android:id="@+id/textFieldEmail"
         android:layout_width="288dp"
         android:layout_height="58dp"
-        android:layout_marginTop="8dp"
         android:hint="@string/label"
         android:textColorHint="#FDFCFC"
         app:boxBackgroundColor="@color/material_on_surface_stroke"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.853"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textFecha"
+        app:layout_constraintTop_toTopOf="@+id/textFieldNombre"
         app:startIconContentDescription="@string/ic_email"
         app:startIconDrawable="@drawable/ic_email">
 
@@ -102,7 +101,7 @@
         app:boxBackgroundColor="@color/material_on_surface_stroke"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.853"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
         app:startIconContentDescription="@string/ic_clave"
@@ -120,14 +119,14 @@
         android:id="@+id/textViewRegistro"
         android:layout_width="286dp"
         android:layout_height="68dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="@string/txtBienvenido"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/txtBienvenido" />
@@ -136,11 +135,11 @@
         android:id="@+id/ButtonRegistrarse"
         android:layout_width="284dp"
         android:layout_height="49dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="84dp"
         android:onClick="LanzarInicio"
         android:text="@string/Button_Registrarse"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textFieldClave" />
 
