Nota 7 exceptuando audio

--- a/Bread4All/app/src/main/res/layout/activity_producto.xml
+++ b/Bread4All/app/src/main/res/layout/activity_producto.xml
@@ -31,7 +31,6 @@
         android:id="@+id/txtPrecio"
         android:layout_width="78dp"
         android:layout_height="33dp"
-        android:layout_marginStart="4dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/txtNombre"
         app:layout_constraintStart_toEndOf="@+id/txtNombre"
@@ -42,11 +41,12 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="148dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="80dp"
+        android:contentDescription="Pan"
+        app:layout_constraintEnd_toStartOf="@+id/txtContenidoDescripcion"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_launcher_foreground" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtNombre"
@@ -76,21 +76,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <VideoView
-        android:id="@+id/videoView"
-        android:layout_width="201dp"
-        android:layout_height="142dp"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/textViewComentarios"
         android:layout_width="154dp"
         android:layout_height="36dp"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="112dp"
         android:layout_marginTop="44dp"
         android:text="@string/Multimedia"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,20 +88,52 @@
 
     <ImageView
         android:id="@+id/imageViewComentarios"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="52dp"
+        android:layout_width="221dp"
+        android:layout_height="204dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.131"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewComentarios"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="225dp"
+        android:layout_height="208dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewComentarios"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewComentarios"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/buttonSubir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="Subir"
+        android:text="@string/Subir"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewComentarios"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="@+id/imageViewComentarios"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewComentarios"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonFoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="SubirImagen"
         android:text="@string/Subir_imagen"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
         app:layout_constraintTop_toTopOf="@+id/imageViewComentarios" />
 
@@ -119,10 +141,50 @@
         android:id="@+id/buttonAudio"
         android:layout_width="150dp"
         android:layout_height="45dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        android:onClick="SubirAudio"
         android:text="@string/Subir_audio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
+        app:layout_constraintTop_toBottomOf="@+id/buttonTomarFoto" />
+
+    <Button
+        android:id="@+id/buttonVideo"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="SubirVideo"
+        android:text="@string/Subir_video"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAudio" />
+
+    <Button
+        android:id="@+id/buttonVideo3"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="comenzarGrabacion"
+        android:text="@string/Grabar_video"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
+        app:layout_constraintTop_toBottomOf="@+id/buttonVideo" />
+
+    <Button
+        android:id="@+id/buttonTomarFoto"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="TomarFoto"
+        android:text="@string/Tomar_foto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
         app:layout_constraintTop_toBottomOf="@+id/buttonFoto" />
 
