--- a/Bread4All/app/src/main/res/layout/activity_producto.xml
+++ b/Bread4All/app/src/main/res/layout/activity_producto.xml
@@ -29,8 +29,8 @@
 
     <TextView
         android:id="@+id/txtPrecio"
-        android:layout_width="78dp"
-        android:layout_height="33dp"
+        android:layout_width="33dp"
+        android:layout_height="32dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/txtNombre"
         app:layout_constraintStart_toEndOf="@+id/txtNombre"
@@ -115,6 +115,7 @@
         android:id="@+id/buttonSubir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:onClick="Subir"
         android:text="@string/Subir"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -187,5 +188,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
         app:layout_constraintTop_toBottomOf="@+id/buttonFoto" />
+
+    <TextView
+        android:id="@+id/txtMoneda"
+        android:layout_width="70dp"
+        android:layout_height="29dp"
+        android:gravity="left"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/txtPrecio"
+        app:layout_constraintStart_toEndOf="@+id/txtPrecio"
+        app:layout_constraintTop_toTopOf="@+id/txtPrecio" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
