--- a/Bread4All/app/src/main/res/layout/activity_recientes.xml
+++ b/Bread4All/app/src/main/res/layout/activity_recientes.xml
@@ -10,19 +10,22 @@
         android:id="@+id/textViewLista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="52dp"
         android:text="@string/lista_de_recientes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textViewRecientes"
-        android:layout_width="333dp"
-        android:layout_height="440dp"
-        android:layout_marginTop="36dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="411dp"
+        android:layout_height="539dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLista" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewLista"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
