--- a/Bread4All/app/src/main/res/layout/activity_producto.xml
+++ b/Bread4All/app/src/main/res/layout/activity_producto.xml
@@ -30,7 +30,7 @@
     <TextView
         android:id="@+id/txtPrecio"
         android:layout_width="33dp"
-        android:layout_height="32dp"
+        android:layout_height="31dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/txtNombre"
         app:layout_constraintStart_toEndOf="@+id/txtNombre"
@@ -50,9 +50,9 @@
 
     <TextView
         android:id="@+id/txtNombre"
-        android:layout_width="85dp"
+        android:layout_width="95dp"
         android:layout_height="31dp"
-        android:layout_marginStart="55dp"
+        android:layout_marginStart="45dp"
         android:layout_marginTop="40dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="44dp"
         android:text="@string/Descripcion"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
@@ -78,11 +79,12 @@
 
     <TextView
         android:id="@+id/textViewComentarios"
-        android:layout_width="154dp"
-        android:layout_height="36dp"
+        android:layout_width="184dp"
+        android:layout_height="26dp"
         android:layout_marginStart="112dp"
         android:layout_marginTop="44dp"
         android:text="@string/Multimedia"
+        android:textAllCaps="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtContenidoDescripcion" />
 
@@ -192,7 +194,7 @@
     <TextView
         android:id="@+id/txtMoneda"
         android:layout_width="70dp"
-        android:layout_height="29dp"
+        android:layout_height="31dp"
         android:gravity="left"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/txtPrecio"
